--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- its a breadcrum but treating it as a navbar for now-->
     </nav>
     <div id="electronics-page">
-        <span class="menu"><i class="ri-menu-line"></i></span>
+        <span class="menu" onclick="sideMenu()"><i class="ri-menu-line"></i></span>
 
         <!-- Fillter Sidebar -->
         <aside class="sidebar">
@@ -268,5 +268,6 @@
             </div>
         </section>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
